Fixes whitespace in footer.

--- a/sandbox/main.css
+++ b/sandbox/main.css
@@ -289,6 +289,3 @@ div.foot {
   width: 100%; }
   div.foot a {
     color: #51b1ff; }
-  div.foot .footersection {
-    display: inline-block;
-    padding: 0px 10px; }
